Ajout vues accueil et connexion

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <title>Route App</title>
-        <link rel="stylesheet" href="web/css/style.css">
+        <link rel="stylesheet" href="ressources/css/style.css">
         <script src="js/script.js"></script>
     </head>
     <body>
         <div ng-view>
         </div>
+        <nav>
+            <a href="#/accueil" class="btn btn-primary">Page d'accueil</a>
+            <a href="#/connexion" class="btn btn-success">Page de contact</a>
+        </nav>
     </body>
 </html>
