début vue accueil/connexion

--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Route App</title>
-        <link rel="stylesheet" href="ressources/css/style.css">
+        <link rel="stylesheet" href="ressources/style.css">
         <script src="js/script.js"></script>
     </head>
     <body>
-        <div ng-view>
-        </div>
-        <nav>
-            <a href="#/accueil" class="btn btn-primary">Page d'accueil</a>
-            <a href="#/connexion" class="btn btn-success">Page de contact</a>
-        </nav>
+        <div ng-view>  </div>
     </body>
 </html>
