--- a/vue/accueil.html
+++ b/vue/accueil.html
@@ -1,7 +1,13 @@
-<!-- partials/home.html -->
-<section class="home">
-    <h2>Page d'accueil</h2>
-    <p>
-        {{ message }}
-    </p>
-</section>
+<div class="loggingForm">
+  <form action="">
+    Nom d'utilisateur<br>
+    <input type="text" name="user" value="">
+    <br>
+    Mot de passe<br>
+    <input type="password" name="mdp" value="">
+    <br><br>
+    <input type="submit" value="Connexion">
+  </form>
+  <br />
+  <button href="#!">Création de compte </button>
+</div>
