--- a/vue/accueil.html
+++ b/vue/accueil.html
@@ -9,5 +9,5 @@
     <input type="submit" value="Connexion">
   </form>
   <br />
-  <button href="#!">Création de compte </button>
+  <button onclick="window.location.href='#!connexion'">Création de compte </button>
 </div>
