ajout page vote + example récupération api

--- a/vue/connexion.html
+++ b/vue/connexion.html
@@ -9,8 +9,8 @@
     Mot de passe<br>
     <input type="password" name="mdp" value="" />
     <br><br>
-    <input type="submit" value="Connexion" />
+    <button onclick="window.location.href='#!vote'">Connexion </button>
+    <!-- <input type="submit" value="Connexion" /> -->
   </form>
-  <br />
   <button onclick="window.location.href='#!creation'">Création de compte </button>
 </div>
