ajout squelette des pages restantes

--- a/vue/profil.html
+++ b/vue/profil.html
@@ -1,4 +1,4 @@
-<div  ng-include="'vue/header-creation.html'"></div>
+<div  ng-include="'vue/header.html'"></div>
 
 <div class="creation">
   <form action="">
@@ -31,6 +31,7 @@
         <input type="password" name="mdpConf" value="" />
       </div>
       <div>
+	mettre la citation du jour en citation favorite
       </div>
     </div>
 
