--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="ressources/css/style.css">
     </head>
     <body>
+      </div>
         <div ng-view>  </div>
 
     </body>
