--- a/vue/vote.html
+++ b/vue/vote.html
@@ -1,3 +1,5 @@
+<div  ng-include="'vue/header.html'"></div>
+
 <div ng-controller="Categories" class="vote-film-list">
   <ul ng-repeat="x in categ">
     <li> {{x}} ici liste des films</li>
