--- a/vue/creation.html
+++ b/vue/creation.html
@@ -40,5 +40,5 @@
     <input type="submit" value="Valider" />
   </form>
   <br />
-  <button onclick="window.location.href='#!connexion'">Confirmer </button>
+  <button ng-click="go('/connexion')">Confirmer </button>
 </div>
