--- a/vue/classement-utilisateurs.html
+++ b/vue/classement-utilisateurs.html
@@ -1,13 +1,13 @@
 <div  ng-include="'vue/header.html'"></div>
 
-<div ng-controller="Categories" class="vote-film-list">
-  <ul ng-repeat="x in categ">
+<div ng-controller="ClassementsUser" class="vote-film-list">
+  <ul ng-repeat="user in users">
     <li style="border: 3px solid black;">
       <div>
         image ici
       </div>
       <div >
-      {{x}} ici liste users
+      {{user}} ici liste users
       genre
       Citation
       Points
