--- a/vue/profil.html
+++ b/vue/profil.html
@@ -5,17 +5,17 @@
     <div class="creation-l">
       <div>
         Nom d'utilisateur<br>
-        <input type="text" name="user" value="" />
+        <input type="text"  ng-model="pseudo" />
       </div>
 
       <div>
         Adresse mail<br>
-        <input type="text" name="mail" value="" />
+        <input type="text" ng-model="mail" />
       </div>
 
       <div>
         Genre préféré <br />
-        <select>
+        <select ng-model="genrePrefere">
           <option value=""></option>
         </select>
       </div>
@@ -24,11 +24,11 @@
     <div class="creation-l">
       <div >
         Mot de passe<br>
-        <input type="password" name="mdp" value="" />
+        <input type="password" ng-model="mdp"/>
       </div>
       <div>
         Confirmer le mot de passe<br>
-        <input type="password" name="mdpConf" value="" />
+        <input type="password" ng-model="mdpConf"/>
       </div>
       <div>
 	mettre la citation du jour en citation favorite
@@ -36,10 +36,10 @@
     </div>
 
     L'image avatar ici <br />
-    <input type="text" name="avatar" value="" />
+    <input type="text" ng-model="lienAvatar"/>
     <br><br>
     <input type="submit" value="Valider" />
   </form>
   <br />
-  <button onclick="window.location.href='#!connexion'">Confirmer </button>
+  <button ng-click="maj()">Confirmer </button>
 </div>
