fix form erreur + maj constante url

--- a/vue/citations-recentes.html
+++ b/vue/citations-recentes.html
@@ -5,7 +5,7 @@
     <li>
       <div >
         <h1>Citation</h1>
-        Titre Film :{{citation.film}}
+        Titre Film : {{citation.film.titre}}
         <br />
         Résumé : {{citation.citation}}
         <br />
