--- a/vue/header.html
+++ b/vue/header.html
@@ -1,21 +1,21 @@
 <div class="header">
-  <a href="#!">
+  <a ng-href="#!">
     ico
   </a>
 
-  <a href="#!vote">
+  <a ng-href="#!vote">
     Vote
   </a>
 
-  <a href="#!classement">
+  <a ng-href="#!classement">
     Classement
   </a>
 
-  <a href="#!citations-recentes">
+  <a ng-href="#!citations-recentes">
     Citation précédentes
   </a>
 
-  <a href="#!profil" id="profil">
+  <a ng-href="#!profil" id="profil">
     Profil
   </a>
 </div>
