--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="ressources/css/style.css">
     </head>
     <body>
-      </div>
-        <div ng-view>  </div>
-
+      <<div ng-view></div>
     </body>
 </html>
