ajout localStorage session + maj controle bouton retour

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" ng-app="myApp" ng-controller="myCtrl">
+<html lang="fr" ng-app="app" ng-controller="Ctrl">
     <head>
         <meta charset="utf-8" />
         <title>{{ Page.title() }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
         <script src="js/script.js"></script>
         <link rel="stylesheet" href="ressources/css/style.css">
     </head>
