maj loader, mise en forme

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <link rel="stylesheet" href="ressources/css/style.css">
     </head>
     <body>
-      <div ng-view></div>
+      <div class="nv-view" ng-view></div>
     </body>
 </html>
