--- a/vue/connexion.html
+++ b/vue/connexion.html
@@ -1,5 +1,5 @@
-<div id="accueil-logo">
-  logo ici
+<div >
+  <img id="accueil-logo" ng-src="https://media.discordapp.net/attachments/412535042938765313/424136646535938058/Logo1.png" alt="logo">
 </div>
 <div class="loginForm">
   <form>
