--- a/vue/profil.html
+++ b/vue/profil.html
@@ -25,7 +25,7 @@
     <div class="creation-l">
       <div >
         Mot de passe(*)<br>
-        <input name="mdp" type="password" nameng-model="mdp"/>
+        <input name="mdp" type="password" ng-model="mdp"/>
       </div>
       <div>
         Confirmer le mot de passe(*)<br>
