--- a/vue/vote.html
+++ b/vue/vote.html
@@ -23,7 +23,7 @@
       <span ng-show="voteEffectue">Vous avez déjà voter aujourd'hui</span>
     </div>
 
-    <div >
+    <div class="film-gros">
       <h1>{{detail.titre}}</h1>
       <img class="affiche" ng-src="{{detail.lien_image}}" alt="{{film.titre}}">
     </div>
