--- a/vue/header.html
+++ b/vue/header.html
@@ -12,7 +12,7 @@
   </a>
 
   <a ng-href="#!citations-recentes">
-    Citation précédentes
+    Citations précédentes
   </a>
 
   <a ng-href="#!profil" id="profil">
